--- a/check.css
+++ b/check.css
@@ -3,78 +3,160 @@ body {
   overflow: scroll;
 }
 
+
 nav {
   background-color: #001a3a !important;
 }
 
-#Kompetenzen > li:nth-child(1){
+
+.liste{
+  margin-top: -15px;
+}
+
+/*Immer das letzte Listenelement*/
+#Profil > li:last-child, #Kompetenzen > li:last-child,#Forderplan > li:last-child, #Erreicht > li:last-child, #Schule > li:last-child, #Klasse > li:last-child, #Exit >li:last-child, #Fragen > li:last-child{
+  margin-bottom: -15px;
+}
+
+/*dunkelblau*/
+#Profil > li:nth-child(1), li:nth-child(3), li:nth-child(5), li:nth-child(7), #Forderplan > li:nth-child(1), li:nth-child(3), li:nth-child(5), li:nth-child(7), #Kompetenzen > li:nth-child(1), #Erreicht > li:nth-child(1), li:nth-child(3), #Schule > li:nth-child(1), #Klasse > li:nth-child(1), #Fragen > li:nth-child(1),  li:nth-child(3), li:nth-child(5),  li:nth-child(7),  li:nth-child(9), #Exit >li:nth-child(1), li:nth-child(3), li:nth-child(5) {
   background-color: #001a3a !important;
 }
 
-#Kompetenzen > li:nth-child(3){
+#Kompetenzen > li:nth-child(3), #Erreicht > li:nth-child(5){
   background-color: #79ab2e !important;
 }
 
-#Kompetenzen > li:nth-child(5){
+#Kompetenzen > li:nth-child(5), #Erreicht > li:nth-child(7){
   background-color: #c6d54f !important;
 }
 
-#Kompetenzen > li:nth-child(7){
+#Kompetenzen > li:nth-child(7), #Erreicht > li:nth-child(9){
   background-color: #94c122 !important;
 }
 
-#Kompetenzen > li:nth-child(9){
+#Kompetenzen > li:nth-child(9), #Erreicht > li:nth-child(11){
   background-color: #44b284 !important;
 }
 
-#Kompetenzen > li:nth-child(11){
+#Kompetenzen > li:nth-child(11), #Erreicht > li:nth-child(13){
   background-color: #ffdd00 !important;
 }
 
-#Kompetenzen > li:nth-child(13){
+#Kompetenzen > li:nth-child(13), #Erreicht > li:nth-child(15){
   background-color: #ffed98 !important;
 }
 
-#Kompetenzen > li:nth-child(15){
+#Kompetenzen > li:nth-child(15), #Erreicht > li:nth-child(17){
   background-color: #fbb900 !important;
 }
 
-#Kompetenzen > li:nth-child(17){
+#Kompetenzen > li:nth-child(17), #Erreicht > li:nth-child(19){
   background-color: #ef7d25 !important;
 }
 
-#Kompetenzen > li:nth-child(19){
+#Kompetenzen > li:nth-child(19), #Erreicht > li:nth-child(21){
   background-color: #d60d66 !important;
 }
 
-#Kompetenzen > li:nth-child(21){
+#Kompetenzen > li:nth-child(21), #Erreicht > li:nth-child(23){
   background-color: #ea518d !important;
 }
 
-#Kompetenzen > li:nth-child(23){
+#Kompetenzen > li:nth-child(23), #Erreicht > li:nth-child(25){
   background-color: #f29db7 !important;
 }
 
-#Kompetenzen > li:nth-child(25){
+#Kompetenzen > li:nth-child(25), #Erreicht > li:nth-child(27){
   background-color: #a62068 !important;
 }
 
-#Kompetenzen > li:nth-child(27){
+#Kompetenzen > li:nth-child(27), #Erreicht > li:nth-child(29){
   background-color: #008fc8 !important;
 }
 
-#Kompetenzen > li:nth-child(29){
+#Kompetenzen > li:nth-child(29), #Erreicht > li:nth-child(31){
   background-color: #62c2d0 !important;
 }
 
-#Kompetenzen > li:nth-child(31){
+#Kompetenzen > li:nth-child(31), #Erreicht > li:nth-child(33){
   background-color: #004077 !important;
 }
 
-#Kompetenzen > li:nth-child(31){
+#Kompetenzen > li:nth-child(33), #Erreicht > li:nth-child(35){
   background-color: #3873b9 !important;
 }
 
-#Forderplan, #Profil, #Schule, #Klasse, #Fragen, #Exit{
-  background-color: #001a3a !important;
+/*hover*/
+
+#Forderplan a:hover, #Profil a:hover, #Exit a:hover, #Fragen a:hover, #Schule a:hover,#Klasse a:hover, #Profil a:hover{
+  background-color: #4565ad !important;
+}
+
+#Kompetenzen > li:nth-child(1) a:hover, #Erreicht > li:nth-child(1) a:hover, #Erreicht > li:nth-child(3) a:hover{
+  background-color: #4565ad !important;
+}
+
+#Kompetenzen > li:nth-child(3) a:hover, #Erreicht > li:nth-child(5) a:hover{
+  background-color: #a1c153 !important;
+}
+
+#Kompetenzen > li:nth-child(5) a:hover, #Erreicht > li:nth-child(7) a:hover{
+  background-color: #dbe283 !important;
+}
+
+#Kompetenzen > li:nth-child(7) a:hover, #Erreicht > li:nth-child(9) a:hover{
+  background-color: #bad151 !important;
+}
+
+#Kompetenzen > li:nth-child(9) a:hover, #Erreicht > li:nth-child(11) a:hover{
+  background-color: #7cc3a3 !important;
+}
+
+#Kompetenzen > li:nth-child(11) a:hover, #Erreicht > li:nth-child(13) a:hover{
+  background-color: #ffea64 !important;
+}
+
+#Kompetenzen > li:nth-child(13) a:hover, #Erreicht > li:nth-child(15) a:hover{
+  background-color: #fff3d8 !important;
+}
+
+#Kompetenzen > li:nth-child(15) a:hover, #Erreicht > li:nth-child(17) a:hover{
+  background-color: #ffcf53 !important;
+}
+
+#Kompetenzen > li:nth-child(17) a:hover, #Erreicht > li:nth-child(19) a:hover{
+  background-color: #f5a04c !important;
+}
+
+#Kompetenzen > li:nth-child(19) a:hover, #Erreicht > li:nth-child(21) a:hover{
+  background-color: #e35184 !important;
+}
+
+#Kompetenzen > li:nth-child(21) a:hover, #Erreicht > li:nth-child(23) a:hover{
+  background-color: #ee7ba9 !important;
+}
+
+#Kompetenzen > li:nth-child(23) a:hover, #Erreicht > li:nth-child(25) a:hover{
+  background-color: #f7bed2 !important;
+}
+
+#Kompetenzen > li:nth-child(25) a:hover, #Erreicht > li:nth-child(27) a:hover{
+  background-color: #c9427e !important;
+}
+
+#Kompetenzen > li:nth-child(27) a:hover, #Erreicht > li:nth-child(29) a:hover{
+  background-color: #4fa8da !important;
+}
+
+#Kompetenzen > li:nth-child(29) a:hover, #Erreicht > li:nth-child(31) a:hover{
+  background-color: #94d3e5 !important;
+}
+
+#Kompetenzen > li:nth-child(31) a:hover, #Erreicht > li:nth-child(33) a:hover{
+  background-color: #005daa !important;
+}
+
+#Kompetenzen > li:nth-child(33) a:hover, #Erreicht > li:nth-child(35) a:hover{
+  background-color: #658bc8 !important;
 }
