--- a/check2.css
+++ b/check2.css
@@ -6,25 +6,19 @@ img {
 form {
     position: absolute;
     left: 70%;
-    display: inline-block;
 }
 
-#Email {
+.form-control {
+    display: block;
     width: 300px;
     height: 40px;
     border-color: #104E8B;
     border-width: medium;
 }
 
-#Passwort {
-    width: 300px;
-    height: 40px;
-    border-color: #104E8B;
-    border-width: medium;
-    margin-bottom: 20px;
-}
-
-#ButtonLos {
-    background-color: green;
-    width: 150px;
+#Login {
+    margin-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
