--- a/check2.css
+++ b/check2.css
@@ -1,54 +1,58 @@
-#header {
-    display: block;
-    margin-left: 400px;
-}
+    #header {
+        display: block;
+        margin-left: 400px;
+    }
 
-form {
-    position: absolute;
-    left: 50%;
-}
+    form {
+        position: absolute;
+        left: 50%;
+    }
 
-.form-control {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    height: 40px;
-    border-color: #104E8B;
-    border-width: medium;
-}
+    .form-control {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        height: 40px;
+        border-color: #104E8B;
+        border-width: medium;
+    }
 
-#Login {
-    margin-top: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+    input[type=email]:focus, input[type=password]:focus {
+        border-color: black;
+    }
 
-#footer {
-    margin-top: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+    #Login {
+        margin-top: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-#edition {
-    font-size: 9pt;
-    color: #001a3a;
-    display: block;
-    text-align: center;
-}
+    #footer {
+        margin-top: 100px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-#ersteZeile {
-    font-size: 9pt;
-    color: #8da6d6;
-    text-align: center;
-    white-space: nowrap;
-}
+    #edition {
+        font-size: 9pt;
+        color: #001a3a;
+        display: block;
+        text-align: center;
+    }
 
-#letzteZeile {
-    margin-top: -10px;
-    font-size: 9pt;
-    color: #8da6d6;
-    text-align: center;
-}
+    #ersteZeile {
+        font-size: 9pt;
+        color: #8da6d6;
+        text-align: center;
+        white-space: nowrap;
+    }
+
+    #letzteZeile {
+        margin-top: -10px;
+        font-size: 9pt;
+        color: #8da6d6;
+        text-align: center;
+    }
