--- a/checkBlue.css
+++ b/checkBlue.css
@@ -5,25 +5,53 @@
 
     form {
         position: absolute;
-        left: 55%;
+        left: 50%;
     }
 
     .form-control {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        font-size: 13pt;
         color: #001a3a;
         width: 300px;
         height: 40px;
-        border-color: #d3ddf2;
+        border-color: grey;
         border-width: medium;
     }
 
     input[type=email]:focus, input[type=password]:focus {
         border-color: #001a3a;
-        font-family: Brandon Grotesque Black !important;
         font-size: 13pt;
+    }
+
+    #sprechblase {
+        position: relative;
+        background-color: #001a3a !important;
+        width: 300px;
+        height: 200px;
+        font-size: 13 pt;
+        font-family: helvetica, tahoma;
+        border: 4px solid white;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -150px;
+        border-radius: 20px;
+        text-align: center;
+    }
+
+    #löschsymbol {
+        margin-top: 10px;
+        margin-left: 260px;
+    }
+
+    #advice {
+        margin-top: -30px;
+        margin-left: 110px;
+    }
+
+    #platzhalterText {
+        text-align: center;
+        color: white;
     }
 
     #Login {
@@ -41,7 +69,6 @@
     }
 
     #edition {
-        font-family: Roboto Thin;
         font-size: 9pt;
         color: #001a3a;
         display: block;
@@ -49,7 +76,6 @@
     }
 
     #ersteZeile {
-        font-family: Roboto Thin;
         font-size: 9pt;
         color: #8da6d6;
         text-align: center;
@@ -58,7 +84,6 @@
 
     #letzteZeile {
         margin-top: -10px;
-        font-family: Roboto Thin;
         font-size: 9pt;
         color: #8da6d6;
         text-align: center;
