--- a/checkconfirmation.css
+++ b/checkconfirmation.css
@@ -5,14 +5,13 @@
 
     form {
         position: absolute;
-        left: 55%;
+        left: 50%;
     }
 
     .form-control {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        font-size: 13pt;
         color: #001a3a;
         width: 300px;
         height: 40px;
@@ -22,8 +21,37 @@
 
     input[type=email]:focus, input[type=password]:focus {
         border-color: #001a3a;
-        font-family: Brandon Grotesque Black !important;
         font-size: 13pt;
+    }
+
+    #sprechblase {
+        position: relative;
+        background-color: #76b82d !important;
+        width: 300px;
+        height: 200px;
+        font-size: 13 pt;
+        font-family: Roboto Thin;
+        border: 4px solid white;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: -150px;
+        border-radius: 20px;
+        text-align: center;
+    }
+
+    #löschsymbol {
+        margin-top: 10px;
+        margin-left: 260px;
+    }
+
+    #confir {
+        margin-top: -30px;
+        margin-left: 110px;
+    }
+
+    #platzhalterText {
+        text-align: center;
+        color: white;
     }
 
     #Login {
@@ -41,7 +69,6 @@
     }
 
     #edition {
-        font-family: Roboto Thin;
         font-size: 9pt;
         color: #001a3a;
         display: block;
@@ -58,8 +85,8 @@
 
     #letzteZeile {
         margin-top: -10px;
-        font-family: Roboto Thin;
         font-size: 9pt;
+        font-family: Roboto Thin;
         color: #8da6d6;
         text-align: center;
     }
