added new components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
+<app-achievedcompetences></app-achievedcompetences>
+<app-chapter-overview></app-chapter-overview>
+<app-educational-plan></app-educational-plan>
+<app-help></app-help>
+<app-logout></app-logout>
+<app-school></app-school>
+<app-studygroup></app-studygroup>
+<app-superhero></app-superhero>
+
 <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <!-- Titel und Schalter werden für eine bessere mobile Ansicht zusammengefasst -->
