--- a/src/app/achievedcompetences/achievedcompetences.component.html
+++ b/src/app/achievedcompetences/achievedcompetences.component.html
@@ -1,3 +1,44 @@
-<p>
-  achievedcompetences works!
-</p>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="achievedCompetencesPic">
+    <img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">
+  </a>
+  <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
+    <li class="liste">
+      <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">DAS KANN ICH!</a>
+    </li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">DAS BIN ICH</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">ICH UND DIE ANDEREN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">DIE WELT UM MICH HERUM</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">SICH BEWEGEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">LERNEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">ARBEITEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">SPRECHEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">FREMDSPRACHE</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">LESEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">SCHREIBEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">MESSEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">LÖSUNGEN FINDEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">ZÄHLEN UND RECHNEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>
+  </ul>
+</li>
