--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,3 +1,17 @@
-<p>
-  help works!
-</p>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="helpPic">
+    <img alt="help" src="images-master/help-inactive.png"></a>
+  <ul class="dropdown-menu" id="help">
+    <li class="liste">
+      <a href="#"><img alt="help" src="images-master/help-big.png">BRAUCHST DU HILFE?</a>
+    </li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">SO GEHT'S!</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">VIDEO-TUTORIALS</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">HÄUFIG GESTELLTE FRAGEN</a></li>
+    <li role="separator" class="divider"></li>
+    <li class="liste"><a href="#">KONTAKT</a></li>
+  </ul>
+</li>
