--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -1,3 +1,10 @@
-<p>
-  school works!
-</p>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="schoolPic">
+    <img alt="school" src="images-master/school/school-inactive.png"></span>
+  </a>
+  <ul class="dropdown-menu" id="school">
+    <li class="liste">
+      <a href="#"><img alt="school" src="images-master/school/school-purple-big-active.png"></a>
+    </li>
+  </ul>
+</li>
