--- a/src/app/studygroup/studygroup.component.html
+++ b/src/app/studygroup/studygroup.component.html
@@ -1,3 +1,10 @@
-<p>
-  studygroup works!
-</p>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="studyGroupPic">
+    <img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
+  <ul class="dropdown-menu" id="studyGroup">
+    <li class="liste">
+      <a href="#"><img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_active-big.png"></a>
+    </li>
+
+  </ul>
+</li>
