--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -1,6 +1,6 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="schoolPic">
-    <img alt="school" src="images-master/school/school-inactive.png"></span>
+    <img alt="school" src="images-master/school/school-inactive.png">
   </a>
   <ul class="dropdown-menu" id="school">
     <li class="liste">
