:dolphin: css hinzugefügt - Fritz, Seda, Vivian

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Titel und Schalter werden für eine bessere mobile Ansicht zusammengefasst -->
     <div class="navbar-header">
@@ -38,6 +38,6 @@
 
       </ul>
     </div>
-    </div>
-    <!-- /.container-fluid -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
