--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+/* unsichtbare Scrollbar*/
+html {
+    -ms-overflow-style: none;  /* IE 10+*/
+    overflow: -moz-scrollbars-none;  /* Firefox*/
+}
+::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome*/
+}
+
+body {
+  background-color: #f7bed2 !important;
+  overflow: scroll;
+}
