:dolphin: Changed: login.css/html auskommentiert - Vivian

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-#header {
+/*#header {
   display: block;
   margin: auto;
 }
@@ -67,4 +67,4 @@ input[type=email]:focus, input[type=password]:focus {
   color: #8da6d6;
   text-align: center;
   white-space: nowrap;
-}
+}*/
