--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 
 <head>
@@ -21,15 +21,15 @@
     <div class="row">
       <div class="col-md-offset col-md">
         <form>
-          <div class="form-group">
-            <!--Benutzername -->
-            <input type="email" class="form-control" id="Email" placeholder="Benutzername">
+          <div class="form-group">-->
+<!--Benutzername-->
+<!--<input type="email" class="form-control" id="Email" placeholder="Benutzername">
           </div>
-          <div class="form-group">
-            <!--/.Passwort-->
-            <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
-            <div class="form-group">
-              <!--<button type="submit" class="btn btn-default">LOS!</button>-->
+          <div class="form-group">-->
+
+<!--  <input type="password" class="form-control" id="Passwort" placeholder="Passwort">-->
+<!--<div class="form-group">
+              <button type="submit" class="btn btn-default">LOS!</button>
               <button type="button" class="btn btn-primary" id="Login">LOS!</button>
             </div>
             <p id="RegistrierenEins">Sie möchten mit CHECK! arbeiten?</p>
@@ -46,4 +46,4 @@
   </div>
 </body>
 
-</html>
+</html>-->
