cleaned up modules, edited com.service

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,7 @@
-<p>
-  content works!
-</p>
 <app-right></app-right>
 <app-middle></app-middle>
+<p id = "test">
+  didnt work
+</p>
+
 <!--<app-left></app-left>-->
