--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<app-header></app-header>
-<app-content></app-content>
-<app-footer></app-footer>
+<!--<app-header></app-header>-->
 
+<app-footer></app-footer>
+<app-content></app-content>
 <h1>
   {{title}}
 </h1>
+
+
+
