Changed: header.html und component.html, kleiner Fehler behoben

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -149,7 +149,7 @@
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="schoolPic">
-            <img alt="school" src="images-master/school/school-inactive.png"></span>
+            <img alt="school" src="images-master/school/school-inactive.png">
           </a>
           <ul class="dropdown-menu" id="school">
             <li class="liste">
@@ -204,7 +204,7 @@
   <!-- /.container-fluid -->
 </nav>
 
-<p><img alt="Lesen" src="images-master/chapter11/littleChapterFlag.png" id="littleChapterFlag"></p>
+<!-- <p><img alt="Lesen" src="images-master/chapter11/littleChapterFlag.png" id="littleChapterFlag"></p>
 <p><img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft"></p>
 <p><img style="float:right" alt="scrollUp" src="images-master/chapter10/scrollUp.png" id="scrollUp"></p>
 <p><img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight"></p>
@@ -216,4 +216,4 @@
     <p id="footerlogo"><img class="resize" alt="logo" src="images-master/logo.png"></p>
     <p id="footertext"> edition 2016 dark night blue 1.0</p>
   </div>
-</nav>
+</nav> -->
