--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<!--<app-header></app-header>-->
+<app-header></app-header>
 
 <app-footer></app-footer>
 <app-content></app-content>
 <h1>
   {{title}}
 </h1>
-
-
-
