--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,12 +120,10 @@
       </ul>
 
 
-      <div>
-        <ul class="nav navbar-nav collapse navbar-collapse" id="logo">
-          <li>
-            <img alt="logo" src="images-master/logo.png">
-          </li>
-        </ul>
+      <div class="brand-centered">
+        <a class="navbar-brand" id="logo">
+          <img alt="logo" src="images-master/logo.png">
+        </a>
       </div>
 
 
@@ -210,10 +208,4 @@
 <p><img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight"></p>
 <p><img style="float:right" alt="scrollDown" src="images-master/chapter10/scrollDown.png" id="scrollDown"></p>
 
-
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
-  <div class="container">
-    <p id="footerlogo"><img class="resize" alt="logo" src="images-master/logo.png"></p>
-    <p id="footertext"> edition 2016 dark night blue 1.0</p>
-  </div>
-</nav> -->
+ -->
