--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-header></app-header>
+<!--<app-header></app-header>
 
 <app-footer></app-footer>
 <app-content></app-content>
 <h1>
   {{title}}
-</h1>
+</h1>-->
+<app-left></app-left>
