--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
 
     <!-- Alle Navigationslinks, Formulare und anderer Inhalt werden hier zusammengefasst und können dann ein- und ausgeblendet werden -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav col-sm-4">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
@@ -120,7 +120,7 @@
       </ul>
 
 
-      <div class="brand-centered">
+      <div class="brand-centered col-sm-4">
         <a class="navbar-brand" id="logo">
           <img alt="logo" src="images-master/logo.png">
         </a>
@@ -129,7 +129,7 @@
 
 
 
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right col-sm-4">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
             <img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
