Changed: footer und header css/html - Fritz, Seda, Vivi

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -21,3 +21,9 @@ nav {
     width: 70px;
     height: auto;
 }
+
+@media (max-width: 767px) {
+  .hidden-xs {
+    display: none !important;
+  }
+}
