--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,9 +120,9 @@
       </ul>
 
 
-      <div class="brand-centered col-sm-4">
-        <a class="navbar-brand" id="logo">
-          <img alt="logo" src="images-master/logo.png">
+      <div class="col-sm-4 hidden-xs">
+        <a class="navbar-brand">
+          <img alt="logo" id="logo" src="images-master/logo.png">
         </a>
       </div>
 
