http requests + dynamic generic html

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
             <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
-            <li class="liste">
+            <!--<li class="liste">
               <a href="#"><img alt="confirmation" src="images-master/confirmation.png">CHECK! KOMPETENZENLISTE</a>
             </li>
             <li role="separator" class="divider"></li>
@@ -52,7 +52,7 @@
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ZÄHLEN UND RECHNEN</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>
+            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>-->
           </ul>
         </li>
         <li class="dropdown">
