--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<!--<app-header></app-header>
+<app-left></app-left>
+<app-header></app-header>
 
-<app-footer></app-footer>
+<!--<app-footer></app-footer>
 <app-content></app-content>
 <h1>
   {{title}}
 </h1>-->
-<app-left></app-left>
+
