Changed: header.css/html - Seda,Fritz, Vivi

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -77,7 +77,10 @@
           </a>
           <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
             <li class="liste">
-              <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">DAS KANN ICH!</a>
+              <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">
+                <p>DAS<br> KANN<br> ICH!</p>
+              </a>
+
             </li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
@@ -170,7 +173,9 @@
             <img alt="help" src="images-master/help-inactive.png"></a>
           <ul class="dropdown-menu" id="help">
             <li class="liste">
-              <a href="#"><img alt="help" src="images-master/help-big.png">BRAUCHST DU HILFE?</a>
+              <a href="#"><img alt="help" src="images-master/help-big.png">
+                <p>BRAUCHST <br> DU HILFE?</p>
+              </a>
             </li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">SO GEHT'S!</a></li>
@@ -187,7 +192,9 @@
             <img alt="logout" src="images-master/logout-iactive.png"></a>
           <ul class="dropdown-menu" id="logout">
             <li class="liste">
-              <a href="#"><img alt="logout" src="images-master/logout-big.png">MÖCHTEST DU<br> CHECK! <br>VERLASSEN?</a>
+              <a href="#"><img id="inListPic" alt="logout" src="images-master/logout-big.png">
+                <p> MÖCHTEST DU<br> CHECK! <br>VERLASSEN?</p>
+              </a>
             </li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">JA</a></li>
