--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -73,7 +73,6 @@ html {
   padding-left: 70px;
 }
 
-
 @media (max-width: 767px) {
 
 .hidden-xs {
@@ -82,10 +81,32 @@ html {
 
 .navbar-right{
   padding: 0px;
+  margin-right: -2px;
+}
+
+.dropdown{
+  border-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: thin;
+}
+
+li a:hover{
+  background-color: #4565ad !important;
 }
 
 }
 
+
+/*Text wird neben dem Bild in der ersten Liste angezeigt*/
+.dropdown p {
+text-align: right;
+display:inline-block;
+padding: 0;
+}
+
+#inListPic{
+  padding-bottom: 30px;
+}
 
 #superheroPic, #schoolPic, #studyGroupPic, #helpPic,{
   margin-left: 1px;
@@ -95,7 +116,6 @@ html {
   padding-left: 125px;
   transform: scale(1.3, 1.3);
 }
-
 
 /*Immer das letzte Listenelement*/
 #superhero > li:last-child, #chapterOverview > li:last-child,#educationalPlan > li:last-child, #achievedCompetences > li:last-child, #school > li:last-child, #studyGroup > li:last-child, #logout >li:last-child, #help > li:last-child{
