added basic routing

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,7 @@
-<!--<!DOCTYPE html>
-<html>
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="login.component.css">
-</head>
 
 
-<body>
+
+
   <div class="container">
     <div class="row">
       <img src="images-master/login/header.png" class="img-responsive" id="header" alt="Startseite">
@@ -21,16 +12,15 @@
     <div class="row">
       <div class="col-md-offset col-md">
         <form>
-          <div class="form-group">-->
-<!--Benutzername-->
-<!--<input type="email" class="form-control" id="Email" placeholder="Benutzername">
+          <div class="form-group">
+            <input type="email" class="form-control" id="Email" placeholder="Benutzername">
           </div>
-          <div class="form-group">-->
+          <div class="form-group">
 
-<!--  <input type="password" class="form-control" id="Passwort" placeholder="Passwort">-->
-<!--<div class="form-group">
-              <button type="submit" class="btn btn-default">LOS!</button>
-              <button type="button" class="btn btn-primary" id="Login">LOS!</button>
+            <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">LOS!</button>
+                <button type="button" class="btn btn-primary" id="Login">LOS!</button>
             </div>
             <p id="RegistrierenEins">Sie möchten mit CHECK! arbeiten?</p>
             <p id="RegistrierenZwei">Jetzt registrieren.</p>
@@ -38,12 +28,10 @@
           <img src="images-master/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
           <p id="edition">edition 2016 dark night blue 1.0</p>
           <div>
-            <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</br>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
+            <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim<br/>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
           </div>
         </form>
       </div>
     </div>
   </div>
-</body>
 
-</html>-->
