--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 
-<app-left></app-left>
+<!--<app-left></app-left>
 
-<app-header></app-header>
-
+<app-header></app-header>-->
+<!--<app-login></app-login>-->
 <!--<app-footer></app-footer>
 <app-content></app-content>
 <h1>
   {{title}}
 </h1>-->
-
+<!--<router-outlet name='logI'></router-outlet>-->
+<router-outlet name='header'></router-outlet>
+<router-outlet name='content'></router-outlet>
+<router-outlet name='footer'></router-outlet>
+<router-outlet></router-outlet>
