--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,37 +1,32 @@
+<div class="container">
+  <div class="row">
+    <img src="images-master/login/header.png" class="img-responsive" id="header" alt="Startseite">
+  </div>
+</div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-offset col-md">
+      <form>
+        <div class="form-group">
+          <input type="email" class="form-control" id="Email" placeholder="Benutzername">
+        </div>
+        <div class="form-group">
 
+          <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
+          <div class="form-group">
+            <button type="button" class="btn btn-primary" id="Login">LOS!</button>
+          </div>
+          <p id="Registrieren">Sie möchten mit CHECK! arbeiten?<br>
+            <a href="">Jetzt registrieren</a></p>
 
-
-  <div class="container">
-    <div class="row">
-      <img src="images-master/login/header.png" class="img-responsive" id="header" alt="Startseite">
+        </div>
+        <img src="images-master/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
+        <p id="edition">edition 2016 dark night blue 1.0</p>
+        <div>
+          <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim<br/>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
+        </div>
+      </form>
     </div>
   </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-offset col-md">
-        <form>
-          <div class="form-group">
-            <input type="email" class="form-control" id="Email" placeholder="Benutzername">
-          </div>
-          <div class="form-group">
-
-            <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
-            <div class="form-group">
-                <button type="submit" class="btn btn-default">LOS!</button>
-                <button type="button" class="btn btn-primary" id="Login">LOS!</button>
-            </div>
-            <p id="RegistrierenEins">Sie möchten mit CHECK! arbeiten?</p>
-            <p id="RegistrierenZwei">Jetzt registrieren.</p>
-          </div>
-          <img src="images-master/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
-          <p id="edition">edition 2016 dark night blue 1.0</p>
-          <div>
-            <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim<br/>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-
+</div>
