--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,8 +15,8 @@
   border-width: medium;
 }
 
-input[type=email]:focus, input[type=password]:focus {
-  border-color: #001a3a;
+input[type=text]:focus, input[type=password]:focus {
+  border-color: #4565ad;
   font-size: 13pt;
 }
 
