--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,11 +9,11 @@
     <div class="col-md-offset col-md">
       <form>
         <div class="form-group">
-          <input type="email" class="form-control" id="Email" placeholder="Benutzername">
+          <input type="text" class="form-control" placeholder="Benutzername">
         </div>
         <div class="form-group">
 
-          <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
+          <input type="password" class="form-control" placeholder="Passwort">
           <div class="form-group">
             <button type="button" class="btn btn-primary" id="Login">LOS!</button>
           </div>
