--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,12 +20,17 @@ input[type=text]:focus, input[type=password]:focus {
   font-size: 13pt;
 }
 
+#Passwort{
+  margin-top: -13px;
+}
+
 #Login {
   display: block;
   margin-top: 20px;
   width: 150px;
   height: 40px;
-  font-size: 13pt;
+  font-size: 10pt;
+  font-weight: bold;
   background-color: #001a3a;
   margin-left: auto;
   margin-right: auto;
