--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group">
 
-          <input type="password" class="form-control" placeholder="Passwort">
+          <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
           <div class="form-group">
             <button type="button" class="btn btn-primary" id="Login">LOS!</button>
           </div>
