--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -1,3 +1,21 @@
-<p>
-  changepassword works!
-</p>
+<div class="container">
+  <div class="row">
+    <img src="images-master/delete-profile.png" class="img-responsive" id="header" alt="Startseite">
+  </div>
+</div>
+<p id="PasswortAendern">PROFIL LÖSCHEN</p>
+<form class="form-horizontal">
+  <!--Eingabefeld Passwort-->
+  <div align="center">
+    <div class="form-group">
+      <label for="password" class="col-sm-4 control-label" id="Label1">PASSWORT* </label>
+      <div class="col-sm-4">
+        <input type="password" class="form-control" id="inputFeld1">
+      </div>
+    </div>
+  </div>
+  <div align="center">
+    <button type="button" class="btn btn-primary" id="PWaendern">LÖSCHEN</button>
+  </div>
+  </div>
+</form>
