--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -16,15 +16,15 @@
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  border-color: #4565ad;
+  border-color: #8da6d6;
   font-size: 13pt;
 }
 
-#Passwort{
+#passwort{
   margin-top: -13px;
 }
 
-#Login {
+#login {
   display: block;
   margin-top: 20px;
   width: 150px;
