--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,13 +9,13 @@
     <div class="col-md-offset col-md">
       <form>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="BENUTZERNAME">
+          <input type="text" id = "username" class="form-control"  #username placeholder="BENUTZERNAME">
         </div>
         <div class="form-group">
 
-          <input type="password" class="form-control" id="Passwort" placeholder="PASSWORT">
+          <input type="password" class="form-control" id="passwort" #password placeholder="PASSWORT">
           <div class="form-group">
-            <button type="button" class="btn btn-primary" id="Login">LOS!</button>
+            <button type="button" class="btn btn-primary" (click)="login(username.value,password.value)"  id="login">LOS!</button>
           </div>
           <p id="Registrieren">Sie möchten mit CHECK! arbeiten?<br>
             <a href="">Jetzt registrieren</a></p>
