Changed: changepassword.css - Seda, Fritz, Vivi

--- a/src/app/changepassword/changepassword.component.css
+++ b/src/app/changepassword/changepassword.component.css
@@ -17,6 +17,12 @@
   border-color: #d3ddf2;
 }
 
+@media (min-width: 767px){
+  #inputFeld2, #inputFeld3, #Label2, #Label3{
+    margin-top: -13px;
+  }
+}
+
 #Label1, #Label2, #Label3 {
   color: #a1b9ed;
 }
@@ -34,8 +40,7 @@
 }
 
 input[type=password]:focus {
-  border-color: #001a3a !important;
-  font-family: Brandon Grotesque Black !important;
+  border-color: #8da6d6 !important;
   font-size: 13pt;
 }
 
@@ -45,8 +50,8 @@ input[type=password]:focus {
   color: white;
   width: 150px;
   height: 40px;
-  font-family: Brandon Grotesque Black;
-  font-size: 13pt;
+  font-weight: bold;
+  font-size: 10pt;
   background-color: #001a3a;
   margin-left: auto;
   margin-right: auto;
