finished route guard

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -145,7 +145,7 @@
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">MEIN PASSWORT ÄNDERN</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">MEIN PROFIL LÖSCHEN</a></li>
+            <li class="liste"><a href="#" routerLink="/deleteprofile" routerLinkActive="active">MEIN PROFIL LÖSCHEN</a></li>
           </ul>
         </li>
         <li class="dropdown">
