renamed images path

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,3 @@
 <app-right></app-right>
 <app-middle></app-middle>
-<p id = "test">
-  didnt work
-</p>
-
-<!--<app-left></app-left>-->
+<app-left></app-left>
