--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom hidden-xs">
   <div class="container">
-    <p id="footerlogo"><img class="resize" alt="logo" src="images-master/logo.png"></p>
+    <p id="footerlogo"><img class="resize" alt="logo" src="images/logo.png"></p>
     <p id="footertext"> edition 2016 dark night blue 1.0</p>
   </div>
 </nav>
