--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,17 +15,18 @@
       <ul class="nav navbar-nav col-sm-4">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
+            <img alt="chapterOverview" src="images/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
             <li class="liste">
-              <a href="#"><img alt="confirmation" src="images-master/confirmation.png">
+              <a href="#"><img alt="confirmation" src="images/confirmation.png">
                 CHECK! KOMPETENZENLISTE
               </a>
             </li>
+            <li role="separator" class="divider"></li>
             <div id = "insert"></div>
             <!--<li class="liste">
-              <a href="#"><img alt="confirmation" src="images-master/confirmation.png">CHECK! KOMPETENZENLISTE</a>
+              <a href="#"><img alt="confirmation" src="images/confirmation.png">CHECK! KOMPETENZENLISTE</a>
             </li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">DAS BIN ICH</a></li>
@@ -63,27 +64,28 @@
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="educationalPlanPic">
-            <img alt="educationalPlan" src="images-master/educationalPlan-inactive.png">
+            <img alt="educationalPlan" src="images/educationalPlan-inactive.png">
           </a>
           <ul class="dropdown-menu" id="educationalPlan">
             <li class="liste">
-              <a href="#"><img alt="educationalPlan" src="images-master/educationalPlan-big.png"></a>
+              <a href="#"><img alt="educationalPlan" src="images/educationalPlan-big.png"></a>
             </li>
-            <li role="separator" class="divider"></li>
+            <div id = "insert3"></div>
+            <!--<li role="separator" class="divider"></li>
             <li class="liste"><a href="#">MATHE ZR BIS 10</a></li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">DEUTSCH SATZANFÄNGE</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">SACHKUNDE "DER WALD"</a></li>
+            <li class="liste"><a href="#">SACHKUNDE "DER WALD"</a></li>-->
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="achievedCompetencesPic">
-            <img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">
+            <img alt="achievedCompetences" src="images/achievedCompetences-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
             <li class="liste">
-              <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-big.png">
+              <a href="#"><img alt="achievedCompetences" src="images/achievedCompetences-big.png">
                 <p>DAS<br> KANN<br> ICH!</p>
               </a>
 
@@ -132,7 +134,7 @@
 
       <div class="col-sm-4 hidden-xs">
         <a class="navbar-brand">
-          <img alt="logo" id="logo" src="images-master/logo.png">
+          <img alt="logo" id="logo" src="images/logo.png">
         </a>
       </div>
 
@@ -142,10 +144,10 @@
       <ul class="nav navbar-nav navbar-right col-sm-4">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
-            <img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
+            <img alt="superhero" src="images/student/superhero-robin-inactive.png"></a>
           <ul class="dropdown-menu" id="superhero">
             <li class="liste">
-              <a href="#"><img alt="superhero" src="images-master/student/superhero-robin-big-active.png"></a>
+              <a href="#"><img alt="superhero" src="images/student/superhero-robin-big-active.png"></a>
             </li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">MEIN PROFIL ÄNDERN</a></li>
@@ -157,30 +159,30 @@
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="schoolPic">
-            <img alt="school" src="images-master/school/school-inactive.png">
+            <img alt="school" src="images/school/school-inactive.png">
           </a>
           <ul class="dropdown-menu" id="school">
             <li class="liste">
-              <a href="#"><img alt="school" src="images-master/school/school-purple-big-active.png"></a>
+              <a href="#"><img alt="school" src="images/school/school-purple-big-active.png"></a>
             </li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="studyGroupPic">
-            <img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
+            <img alt="studyGroup" src="images/studyGroup/studyGroup_2b_inactive.png"></a>
           <ul class="dropdown-menu" id="studyGroup">
             <li class="liste">
-              <a href="#"><img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_active-big.png"></a>
+              <a href="#"><img alt="studyGroup" src="images/studyGroup/studyGroup_2b_active-big.png"></a>
             </li>
 
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="helpPic">
-            <img alt="help" src="images-master/help-inactive.png"></a>
+            <img alt="help" src="images/help-inactive.png"></a>
           <ul class="dropdown-menu" id="help">
             <li class="liste">
-              <a href="#"><img alt="help" src="images-master/help-big.png">
+              <a href="#"><img alt="help" src="images/help-big.png">
                 <p>BRAUCHST <br> DU HILFE?</p>
               </a>
             </li>
@@ -196,10 +198,10 @@
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <img alt="logout" src="images-master/logout-iactive.png"></a>
+            <img alt="logout" src="images/logout-iactive.png"></a>
           <ul class="dropdown-menu" id="logout">
             <li class="liste">
-              <a href="#"><img id="inListPic" alt="logout" src="images-master/logout-big.png">
+              <a href="#"><img id="inListPic" alt="logout" src="images/logout-big.png">
                 <p> MÖCHTEST DU<br> CHECK! <br>VERLASSEN?</p>
               </a>
             </li>
@@ -216,10 +218,10 @@
   <!-- /.container-fluid -->
 </nav>
 
-<!-- <p><img alt="Lesen" src="images-master/chapter11/littleChapterFlag.png" id="littleChapterFlag"></p>
-<p><img alt="illustrationLeft" src="images-master/illustrations/illustrationLeft.png" id="illustrationLeft"></p>
-<p><img style="float:right" alt="scrollUp" src="images-master/chapter10/scrollUp.png" id="scrollUp"></p>
-<p><img style="float:right" alt="illustrationRight" src="images-master/illustrations/illustrationRight.png" id="illustrationRight"></p>
-<p><img style="float:right" alt="scrollDown" src="images-master/chapter10/scrollDown.png" id="scrollDown"></p>
+<!-- <p><img alt="Lesen" src="images/chapter11/littleChapterFlag.png" id="littleChapterFlag"></p>
+<p><img alt="illustrationLeft" src="images/illustrations/illustrationLeft.png" id="illustrationLeft"></p>
+<p><img style="float:right" alt="scrollUp" src="images/chapter10/scrollUp.png" id="scrollUp"></p>
+<p><img style="float:right" alt="illustrationRight" src="images/illustrations/illustrationRight.png" id="illustrationRight"></p>
+<p><img style="float:right" alt="scrollDown" src="images/chapter10/scrollDown.png" id="scrollDown"></p>
 
  -->
