--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <img src="images-master/login/header.png" class="img-responsive" id="header" alt="Startseite">
+    <img src="images/login/header.png" class="img-responsive" id="header" alt="Startseite">
   </div>
 </div>
 
@@ -21,7 +21,7 @@
             <a href="">Jetzt registrieren</a></p>
 
         </div>
-        <img src="images-master/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
+        <img src="images/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
         <p id="edition">edition 2016 dark night blue 1.0</p>
         <div>
           <p id="Impressum">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim<br/>www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
