--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <img src="images-master/change-password.png" class="img-responsive" id="header" alt="Startseite">
+    <img src="images/change-password.png" class="img-responsive" id="header" alt="Startseite">
   </div>
 </div>
 <p id="PasswortAendern">PASSWORT ÄNDERN</p>
